Bug 271540 - Bullets which are not there in the actual odp file are displaying.
Summary: Bullets which are not there in the actual odp file are displaying.
Status: VERIFIED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: text-layout (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-23 10:27 UTC by swathi
Modified: 2011-11-02 08:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot in Open Office (713.19 KB, image/x-png)
2011-04-23 10:31 UTC, swathi
Details
Screenshot in Calligra Stage (285.17 KB, image/x-png)
2011-04-23 10:32 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-04-23 10:27:19 UTC
Version: git text-layoutrestructure-boemann branch
         (Using KDE 4.5.5)                
     OS: Kubuntu 10.10
Test data is there in the below link.
http://sam.zoy.org/lectures/20071208-debian/slides.odp
Open the same document in calligra stage, and observe the text in the 1st slide.

Expected outcome:
Text should be displayed with out bulleting.

Actual outcome:
Text is displaying with bulleting, which is not there in the actual odp file.
Please check the screenshots attached.

Frequency:
Always.
Comment 1 swathi 2011-04-23 10:31:01 UTC
Created attachment 59240 [details]
Screenshot in Open Office
Comment 2 swathi 2011-04-23 10:32:46 UTC
Created attachment 59241 [details]
Screenshot in Calligra Stage
Comment 3 swathi 2011-04-23 10:51:02 UTC
For the test data in the  link http://www.plug.ps/foss_19-9.odp,similar issue is observed in the 1st slide.
Comment 4 Camilla Boemann 2011-04-23 18:41:08 UTC
They appear to be saving this info in an unofficial property text:enable-numbering
Comment 5 Pierre Ducroquet 2011-04-24 20:32:20 UTC
This is an old OpenOffice.org/LibreOffice bug.
http://openoffice.org/bugzilla/show_bug.cgi?id=75927
I'll see if we could add support for this property.
Comment 6 Pierre Ducroquet 2011-04-28 00:07:10 UTC
Following a commit tonight, this bug has been fixed.

Thanks for your report.

http://commits.kde.org/calligra/4e1815e448d44a4480dd218e2f7372960f0cfbd6
Comment 7 swathi 2011-05-23 15:01:42 UTC
Tested in git commit  36a52869a926d01ad16593d3e8c7b7554765bec.
Still bullets are displaying.
Comment 8 Camilla Boemann 2011-10-31 17:29:07 UTC
Git commit d3914d031ebc49376c234518ddc43dcbba6c9cf6 by C. Boemann.
Committed on 31/10/2011 at 18:25.
Pushed by boemann into branch 'master'.

Removing the ForceDisablingList makes our little party trick not work
for nested lists
Leaving it in does no harm, it's still in the style too anyway

BUG:271540

M  +1    -4    libs/kotext/opendocument/KoTextLoader.cpp

http://commits.kde.org/calligra/d3914d031ebc49376c234518ddc43dcbba6c9cf6
Comment 9 swathi 2011-11-02 08:15:39 UTC
Verified in 9c203a706dc37927b69367b9c91d8f952fcf0b18.