Removing the ForceDisablingList makes our little party trick not work for nested lists Leaving it in does no harm, it's still in the style too anyway

BUG:271540